fix maps not showing on match page

--- a/resources/sass/_tournament.scss
+++ b/resources/sass/_tournament.scss
@@ -19,7 +19,7 @@
                 position: absolute;
                 width: 100%;
                 left: -16px;
-                top: -39px;
+                top: -85px;
                 opacity: 0.7;
                 height: 100%;
                 font-size: 170px;
